boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_encodes_nullable_primitives_as_compact_wire.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: "rendered_fixture(\"exports/nullable_primitive_functions\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_function_demo_maybe_add(value: java.nio.ByteBuffer, __boltffi_value_len: Int): ByteArray?
}

fun maybeAdd(value: Int?): UInt? {
    val __boltffi_value_wire = WireWriterPool.acquire(if (value == null) 1 else 5)
    val __boltffi_value_writer = __boltffi_value_wire.writer
    __boltffi_value_writer.writeOptionalI32(value)
    try {
        val __boltffi_result = Native.boltffi_function_demo_maybe_add(__boltffi_value_wire.directBuffer(), __boltffi_value_wire.size()) ?: throw IllegalStateException("null buffer returned")
        val __boltffi_reader = WireReader(__boltffi_result)
        return __boltffi_reader.readOptionalU32()
    } finally {
        __boltffi_value_wire.close()
    }
}
