boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_preserves_rust_pascal_type_spelling.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: "rendered_fixture(\"exports/acronym_class\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_release_class_demo_gps_simulator(handle: Long): Unit
    @JvmStatic external fun boltffi_init_class_demo_gps_simulator_new(enabled: Boolean): Long
    @JvmStatic external fun boltffi_method_class_demo_gps_simulator_enabled(`receiver`: Long): Boolean
}

class GPSSimulator internal constructor(internal val handle: Long) : AutoCloseable {
    private val __boltffi_calls = java.util.concurrent.atomic.AtomicLong(1L)
    private val __boltffi_closed = java.util.concurrent.atomic.AtomicBoolean(false)

    override fun close() {
        if (__boltffi_closed.compareAndSet(false, true)) {
            boltffiRelease()
        }
    }

    internal fun __boltffiTakeHandle(): Long {
        check(__boltffi_closed.compareAndSet(false, true)) { "GPSSimulator is closed" }
        if (!__boltffi_calls.compareAndSet(1L, 0L)) {
            boltffiRelease()
            throw IllegalStateException("GPSSimulator was passed by value while a call on it was still in flight; it has been closed")
        }
        return handle
    }

    internal fun boltffiHandle(): Long {
        check(!__boltffi_closed.get()) { "GPSSimulator is closed" }
        return handle
    }

    internal fun boltffiRetain(): Long {
        while (true) {
            check(!__boltffi_closed.get()) { "GPSSimulator is closed" }
            val calls = __boltffi_calls.get()
            check(calls != 0L) { "GPSSimulator is closed" }
            if (__boltffi_calls.compareAndSet(calls, calls + 1L)) return handle
        }
    }

    internal fun boltffiRelease() {
        if (__boltffi_calls.decrementAndGet() == 0L) {
            Native.boltffi_release_class_demo_gps_simulator(handle)
        }
    }

    constructor(enabled: Boolean) : this(new(enabled).handle)

    companion object {
        fun new(enabled: Boolean): GPSSimulator {
            return GPSSimulator(Native.boltffi_init_class_demo_gps_simulator_new(enabled))
        }
    }

    fun enabled(): Boolean {
        val __boltffi_receiver = boltffiRetain()
        try {
            return Native.boltffi_method_class_demo_gps_simulator_enabled(__boltffi_receiver)
        } finally {
            boltffiRelease()
        }
    }
}
