boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_qualifies_shadowed_data_enum_payloads.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: "rendered_fixture(\"enums/error_payload_shadow\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo

sealed class StorageError {
    internal abstract fun wireSize(): Int

    internal abstract fun writeTo(writer: WireWriter)

    internal fun toByteArray(): ByteArray {
        val buffer = WireWriterPool.acquire(wireSize())
        val writer = buffer.writer
        try {
            writeTo(writer)
            return buffer.bytes()
        } finally {
            buffer.close()
        }
    }


    object InvalidPath : StorageError() {
        internal override fun wireSize(): Int {
            return 4
        }

        internal override fun writeTo(writer: WireWriter) {
            writer.writeU32(0u)
        }
    }
    data class Io(
        val field0: String
    ) : StorageError() {
        internal override fun wireSize(): Int {
            return 4 + 4 + Utf8Codec.maxBytes(this.field0)
        }

        internal override fun writeTo(writer: WireWriter) {
            writer.writeU32(1u)
            writer.writeString(this.field0)
        }
    }

    companion object {
        internal fun fromReader(reader: WireReader): StorageError {
            val tag = reader.readU32()
            return when (tag) {
                0u -> InvalidPath
                1u -> Io(reader.readString())
                else -> throw IllegalArgumentException("unknown StorageError tag: $tag")
            }
        }

        internal fun fromByteArray(bytes: ByteArray): StorageError {
            val reader = WireReader(bytes)
            return fromReader(reader)
        }
    }
}


sealed class RecorderError {
    internal abstract fun wireSize(): Int

    internal abstract fun writeTo(writer: WireWriter)

    internal fun toByteArray(): ByteArray {
        val buffer = WireWriterPool.acquire(wireSize())
        val writer = buffer.writer
        try {
            writeTo(writer)
            return buffer.bytes()
        } finally {
            buffer.close()
        }
    }


    object InvalidConfig : RecorderError() {
        internal override fun wireSize(): Int {
            return 4
        }

        internal override fun writeTo(writer: WireWriter) {
            writer.writeU32(0u)
        }
    }
    data class StorageError(
        val field0: com.boltffi.demo.StorageError
    ) : RecorderError() {
        internal override fun wireSize(): Int {
            return 4 + this.field0.wireSize()
        }

        internal override fun writeTo(writer: WireWriter) {
            writer.writeU32(1u)
            this.field0.writeTo(writer)
        }
    }
    object SessionNotStarted : RecorderError() {
        internal override fun wireSize(): Int {
            return 4
        }

        internal override fun writeTo(writer: WireWriter) {
            writer.writeU32(2u)
        }
    }

    companion object {
        internal fun fromReader(reader: WireReader): RecorderError {
            val tag = reader.readU32()
            return when (tag) {
                0u -> InvalidConfig
                1u -> StorageError(com.boltffi.demo.StorageError.fromReader(reader))
                2u -> SessionNotStarted
                else -> throw IllegalArgumentException("unknown RecorderError tag: $tag")
            }
        }

        internal fun fromByteArray(bytes: ByteArray): RecorderError {
            val reader = WireReader(bytes)
            return fromReader(reader)
        }
    }
}
