boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_renders_async_class_methods.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: "rendered_fixture(\"exports/async_class_methods\")"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo

import kotlinx.coroutines.launch
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_release_class_demo_engine(handle: Long): Unit
    @JvmStatic external fun boltffi_init_class_demo_engine_new(): Long
    @JvmStatic external fun boltffi_method_class_demo_engine_compute(`receiver`: Long, value: Int): Long
    @JvmStatic external fun boltffi_async_method_class_demo_engine_compute_poll(handle: Long, callback_data: Long): Byte
    @JvmStatic external fun boltffi_async_method_class_demo_engine_compute_complete(handle: Long): Int
    @JvmStatic external fun boltffi_async_method_class_demo_engine_compute_cancel(handle: Long): Unit
    @JvmStatic external fun boltffi_async_method_class_demo_engine_compute_free(handle: Long): Unit
    @JvmStatic external fun boltffi_async_method_class_demo_engine_compute_panic_message(handle: Long): ByteArray?

    @JvmStatic fun boltffiFutureContinuationCallback(handle: Long, pollResult: Byte) {
        BoltFfiAsync.resume(handle, pollResult)
    }
}

class Engine internal constructor(internal val handle: Long) : AutoCloseable {
    private val __boltffi_calls = java.util.concurrent.atomic.AtomicLong(1L)
    private val __boltffi_closed = java.util.concurrent.atomic.AtomicBoolean(false)

    override fun close() {
        if (__boltffi_closed.compareAndSet(false, true)) {
            boltffiRelease()
        }
    }

    internal fun __boltffiTakeHandle(): Long {
        check(__boltffi_closed.compareAndSet(false, true)) { "Engine is closed" }
        if (!__boltffi_calls.compareAndSet(1L, 0L)) {
            boltffiRelease()
            throw IllegalStateException("Engine was passed by value while a call on it was still in flight; it has been closed")
        }
        return handle
    }

    internal fun boltffiHandle(): Long {
        check(!__boltffi_closed.get()) { "Engine is closed" }
        return handle
    }

    internal fun boltffiRetain(): Long {
        while (true) {
            check(!__boltffi_closed.get()) { "Engine is closed" }
            val calls = __boltffi_calls.get()
            check(calls != 0L) { "Engine is closed" }
            if (__boltffi_calls.compareAndSet(calls, calls + 1L)) return handle
        }
    }

    internal fun boltffiRelease() {
        if (__boltffi_calls.decrementAndGet() == 0L) {
            Native.boltffi_release_class_demo_engine(handle)
        }
    }

    constructor() : this(new().handle)

    companion object {
        fun new(): Engine {
            return Engine(Native.boltffi_init_class_demo_engine_new())
        }
    }

    suspend fun compute(value: UInt): UInt {
        return boltffiCallAsync(
            createFuture = {
                val __boltffi_receiver = boltffiRetain()
                try {
                    Native.boltffi_method_class_demo_engine_compute(__boltffi_receiver, value.toInt())
                } catch (__boltffi_failure: Throwable) {
                    boltffiRelease()
                    throw __boltffi_failure
                }
            },
            poll = { future, contHandle -> Native.boltffi_async_method_class_demo_engine_compute_poll(future, contHandle) },
            complete = { future ->
                Native.boltffi_async_method_class_demo_engine_compute_complete(future).toUInt()
            },
            free = { future ->
                try {
                    Native.boltffi_async_method_class_demo_engine_compute_free(future)
                } finally {
                    boltffiRelease()
                }
            },
            cancel = { future -> Native.boltffi_async_method_class_demo_engine_compute_cancel(future) },
        )
    }
}
